test/pending/neg/t0673.check
Test.scala:2: error: not found: value JavaClass
  val x = JavaClass.InnerClass
          ^
one error found
